--- a/css/style.css
+++ b/css/style.css
@@ -165,13 +165,21 @@ table {
     background-color: #E3C88F;
     width: 20vw;
     height: 0;
-    transition: 0.7s;
+    transition: 0.2s;
+}
+
+#resultado_cards {
+    display: none;
+    flex-direction: column;
+    
 }
 
 .resultado_card {
-    display: none;
+    display: flex;
     flex-direction: column;
-    gap: 1em;
+    width: 100%;
+    height: 3em;
     background-color: aliceblue;
-    padding: 1em;
+    padding: 0.5em;
+    border-bottom: 0.5vh solid #b49a61;
 }
