--- a/css/style.css
+++ b/css/style.css
@@ -88,33 +88,40 @@ gap: 1em;
 }
 
 #search-input {
-background-color: white;
-padding: 5px;
-margin-left: auto; 
-margin-right: auto; 
-display: none; 
-text-align: center; 
+  background-color: white;
+  padding: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  display: none;
+  text-align: center;
+  transition: width 0.3s ease, margin 0.3s ease; /* Adiciona uma transição suave */
+}
+
+/* Adicione essa regra para centralizar o #search-input quando clicado no mobile */
+#search-input:focus {
+  width: 80%; /* Ajusta a largura quando em foco */
+  margin: 5px auto; /* Centraliza o input */
 }
 
 
 .sessao_principal {
-  width:80%;
+  width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
 }
 
 .principal {
-  margin: 5vh;
+  margin: 5vh auto 0; /* Adicionei 'auto' para centralizar verticalmente */
   display: flex;
   justify-content: center;
   flex-direction: column;
-  margin: 6em auto;
-  margin-right: 5.5em;
-  gap: 5em;
-  width: 50vw;
+  gap: 15em; 
+  width: 80%; 
+  max-width: 1200px; /* Adicione uma largura máxima para melhor responsividade */
 }
-
-
 
 .principal_card {
   display: flex;
@@ -130,27 +137,31 @@ text-align: center;
 }
 
 .principal_card_img {
-  height: inherit;
-  width: inherit;
+  width: 100%; 
   border-radius: 1em;
-  width: 50vw;
+  gap: 1em;
 }
 
-.principal_card_img:hover{
-border: 2px solid #333;
-cursor: pointer;
-transition: border-color 0.3s;
+.principal_card_img:hover {
+  border: 2px solid #333;
+  cursor: pointer;
+  transition: border-color 0.3s;
 }
 
 .principal_minicards {
-  width: 56vw;
   display: flex;
-  gap: 4em;
-  margin-bottom: 3.5em;
+  justify-content: space-between;
+  margin-bottom: 2em;
+  align-items: center;
+  gap: 10em; /* Ajuste o espaçamento conforme necessário */
 }
 
+
 .principal_minicard {
-  width: 50%;
+  width: 40vh; /* Ajuste a largura do minicard conforme necessário */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .principal_minicard_titulo {
@@ -160,21 +171,21 @@ transition: border-color 0.3s;
 }
 
 .principal_minicard_img {
-  width: 78%;
-  height: 25vh;
+  width: 100%; /* Faça as imagens ocuparem a largura total */
+  max-height: 40vh; /* Ajuste a altura máxima conforme necessário */
   border-radius: 0.5em 1em 1em 1em;
+  margin-top: 1em; 
+  gap: 20em;/* Adicione um espaço superior entre o título e a imagem */
 }
 
-.principal_minicard_img:hover{
-border: 2px solid #333;
-cursor: pointer;
-transition: border-color 0.3s;
-}
 
-.conteudo_sessao {
-  display: flex;
-  gap: 3em;
-  flex-wrap: wrap;
+
+
+
+.principal_minicard_img:hover {
+  border: 2px solid #333;
+  cursor: pointer;
+  transition: border-color 0.3s;
 }
 
 .conteudo_titulo {
@@ -212,6 +223,7 @@ margin: 0 auto;
 left: 50%;
 transform: translateX(-50%);
 color: white;
+
 }
 
 #resultado_cards {
@@ -318,7 +330,7 @@ color: #E3C88F;
       justify-content: space-evenly;
       align-items: center;
       height: 20vw;
-      width: 100vw;
+      width: 100%;
       margin: 0 auto;
   }
 
@@ -326,7 +338,7 @@ color: #E3C88F;
       width: 60%; 
       gap: 1em;
       text-align: center;
-      padding: 20px; 
+      flex-direction: row-reverse;
   }
 
   .cabecalho_imagem {
@@ -339,16 +351,16 @@ color: #E3C88F;
   }
 
   #search-input {
-      width: 80%; 
-      margin: 5px auto; 
+    width: 80%; 
+    margin: 5px auto; 
   }
 
   .sessao_principal {
-      width: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
-      flex-wrap: wrap;
+      flex-wrap: wrap; 
+      margin: 0 auto;
   }
 
   .principal{
@@ -357,7 +369,8 @@ color: #E3C88F;
     justify-content: center;
     flex-direction: column;
     gap: 5em;
-    width: 60vw;
+    width:100%;
+
   }
 
   .principal_card {
@@ -367,25 +380,22 @@ color: #E3C88F;
   }
 
   .principal_card_img {
-      width: 100%; 
+      width: 80%; 
       height: auto; 
   }
 
   .principal_minicards {
-      width: 80%; 
-      flex-direction: column;
-      gap: 1em;
-      margin-bottom: 2em;
-      margin: 0 auto;
+    width: 80%;
+    display: flex;
+    flex-direction: column; /* Alteração para empilhar os minicards verticalmente */
+    align-items: center; /* Alinhamento central dos minicards */
+    gap: 0; /* Remova o gap para dispositivos móveis */
+    margin-bottom: 2em;
+    margin: 0 auto;
   }
 
-  .principal_minicard {
-      width: 110%;
-  }
-
-  .principal_minicard_img {
-      width: 110%;
-      height: auto;
+  #scroll-top-link{
+   right: 20%;
   }
 
   .Rodape{
@@ -396,3 +406,19 @@ color: #E3C88F;
   }
 
 }
+
+
+
+@media only screen and (min-width: 601px) and (max-width: 1024px) {
+    .principal_minicards {
+      width: 80%;
+      display: flex;
+      justify-content: space-between;
+      gap: 10px; /* Ajuste o espaçamento conforme necessário para o iPad */
+      margin-bottom: 2em;
+      margin: 0 auto;
+      align-items: center;
+    }
+  }
+  
+
