--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ table {
 	border-spacing: 0;
 }
 
-/* --------- */
+/* Bloco */
 .fundo {
   background-color: #1A1A1A;
   display: flex;
@@ -59,62 +59,64 @@ table {
 }
 
 .cabecalho {  
-display: flex;
-justify-content: space-around;
-align-items: center;
-height: 10vh;
-background-color: #E3C88F;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 10vh;
+  background-color: #E3C88F;
 }
-
-
 
 .cabecalho_imagem {
-height: 5vh;
-max-width: 100%; 
-border-radius: 15px;
+  height: 5vh;
+  max-width: 100%;
+  border-radius: 15px;
 }
 
-.cabecalho_imagem:hover{
+.cabecalho_imagem:hover {
   border: 2px solid #333;
   cursor: pointer;
   transition: border-color 0.3s;
 }
 
-
 .cabecalho_pesquisa {
-display: flex;
-align-items: center; /* Alinha os itens ao centro */
-gap: 1em;
+  display: flex;
+  align-items: center;
+  gap: 1em;
 }
 
 #search-input {
-background-color: white;
-padding: 5px;
-margin-left: auto; 
-margin-right: auto; 
-display: none; 
-text-align: center; 
+  background-color: white;
+  padding: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  display: none;
+  text-align: center;
+  transition: width 0.3s ease, margin 0.3s ease;
 }
 
+#search-input:focus {
+  width: 80%;
+  margin: 5px auto;
+}
 
 .sessao_principal {
-  width:80%;
+  width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
 }
 
 .principal {
-  margin: 5vh;
+  margin: 5vh auto 0;
   display: flex;
   justify-content: center;
   flex-direction: column;
-  margin: 6em auto;
-  margin-right: 5.5em;
-  gap: 5em;
-  width: 50vw;
+  gap: 15em;
+  width: 80%;
+  max-width: 1200px;
 }
-
-
 
 .principal_card {
   display: flex;
@@ -130,27 +132,30 @@ text-align: center;
 }
 
 .principal_card_img {
-  height: inherit;
-  width: inherit;
+  width: 100%;
   border-radius: 1em;
-  width: 50vw;
+  gap: 1em;
 }
 
-.principal_card_img:hover{
-border: 2px solid #333;
-cursor: pointer;
-transition: border-color 0.3s;
+.principal_card_img:hover {
+  border: 2px solid #333;
+  cursor: pointer;
+  transition: border-color 0.3s;
 }
 
 .principal_minicards {
-  width: 56vw;
   display: flex;
-  gap: 4em;
-  margin-bottom: 3.5em;
+  justify-content: space-between;
+  margin-bottom: 2em;
+  align-items: center;
+  gap: 10em;
 }
 
 .principal_minicard {
-  width: 50%;
+  width: 40vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .principal_minicard_titulo {
@@ -160,44 +165,40 @@ transition: border-color 0.3s;
 }
 
 .principal_minicard_img {
-  width: 78%;
-  height: 25vh;
+  width: 100%;
+  max-height: 40vh;
   border-radius: 0.5em 1em 1em 1em;
+  margin-top: 1em;
+  gap: 20em;
 }
 
-.principal_minicard_img:hover{
-border: 2px solid #333;
-cursor: pointer;
-transition: border-color 0.3s;
-}
-
-.conteudo_sessao {
-  display: flex;
-  gap: 3em;
-  flex-wrap: wrap;
+.principal_minicard_img:hover {
+  border: 2px solid #333;
+  cursor: pointer;
+  transition: border-color 0.3s;
 }
 
 .conteudo_titulo {
-font-size: 2.5em;
-color: aliceblue;
-margin: 1em 0;
+  font-size: 2.5em;
+  color: aliceblue;
+  margin: 1em 0;
 }
 
 .conteudo_card {
-width: 15em;
-border-radius: 0.5em 1em 1em 1em;
-overflow: hidden;
-position: relative;
-transition: transform 0.3s;
-cursor: pointer;
+  width: 15em;
+  border-radius: 0.5em 1em 1em 1em;
+  overflow: hidden;
+  position: relative;
+  transition: transform 0.3s;
+  cursor: pointer;
 }
 
 .conteudo_card_titulo {
-color: aliceblue;
-font-size: 1.5em;
-margin-bottom: 0.5em;
-padding: 10px;
-background-color: #333;
+  color: aliceblue;
+  font-size: 1.5em;
+  margin-bottom: 0.5em;
+  padding: 10px;
+  background-color: #333;
 }
 
 .conteudo_card_img {
@@ -205,69 +206,67 @@ background-color: #333;
   border-radius: 0.5em 1em 1em 1em;
 }
 
-.resultado_pesquisa { position: absolute;
-width: 100vh;
-background-color: rgba(0, 0, 0, 0.5);
-margin: 0 auto;
-left: 50%;
-transform: translateX(-50%);
-color: white;
+.resultado_pesquisa {
+  position: absolute;
+  width: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  margin: 0 auto;
+  left: 50%;
+  transform: translateX(-50%);
+  color: white;
 }
 
 #resultado_cards {
   display: none;
   flex-direction: column;
-  
 }
 
 .conteudo_card:hover {
-transform: scale(1.05);
+  transform: scale(1.05);
 }
 
 .conteudo_card:hover .conteudo_card_titulo {
-background-color: #E3C88F;
-color: #333;
-cursor: pointer;
+  background-color: #E3C88F;
+  color: #333;
+  cursor: pointer;
 }
 
 .conteudo_vermais {
-background-color: #E3C88F;
-color: #fff;
-padding: 10px 20px;
-border: none;
-border-radius: 5px;
-cursor: pointer;
-font-size: 1.2em;
-transition: background-color 0.3s, color 0.3s;
+  background-color: #E3C88F;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1.2em;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 .conteudo_vermais:hover {
-background-color: #333;
-color: #E3C88F;
+  background-color: #333;
+  color: #E3C88F;
 }
 
-
-
 .Rodape {
-display: flex;
-justify-content: space-around;
-align-items: center;
-height: 12vh;
-background-color: #E3C88F;
-margin-top: auto; 
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 12vh;
+  background-color: #E3C88F;
+  margin-top: auto;
 }
 
 .link-rodape {
-height: 100%; 
-display: flex;
-align-items: center;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .rodape-img {
-height: 40px;
-width: auto; 
-margin: 0 10px; 
-border-radius: 20px;
+  height: 40px;
+  width: auto;
+  margin: 0 10px;
+  border-radius: 20px;
 }
 
 .resultado_pesquisa {
@@ -283,30 +282,28 @@ border-radius: 20px;
 }
 
 .resultado_pesquisa:hover {
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Adiciona sombreamento quando hover */
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
 #scroll-top-link {
-position: fixed;
-bottom: 5%;
-right: 5%;
-background-color: #E3C88F;
-color: #fff;
-padding: 10px;
-border-radius: 5px;
-display: none;
-text-decoration: none;
-cursor: pointer;
-transition: background-color 0.3s, color 0.3s;
+  position: fixed;
+  bottom: 5%;
+  right: 5%;
+  background-color: #E3C88F;
+  color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  display: none;
+  text-decoration: none;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 #scroll-top-link:hover {
-background-color: #333;
-color: #E3C88F;
+  background-color: #333;
+  color: #E3C88F;
 }
 
-
-/* Adicione essas regras ao seu bloco @media */
 @media only screen and (max-width: 600px) {
   body {
       margin-top: 100vh;
@@ -318,81 +315,98 @@ color: #E3C88F;
       justify-content: space-evenly;
       align-items: center;
       height: 20vw;
-      width: 100vw;
+      width: 100%;
       margin: 0 auto;
   }
 
   .cabecalho_pesquisa {
-      width: 60%; 
       gap: 1em;
       text-align: center;
-      padding: 20px; 
+      display: flex;
+      justify-content: space-between;
   }
 
   .cabecalho_imagem {
       align-items: center;
   }
 
-  .cabecalho_imagem img {
-      max-width: 100vh; 
-      height: auto;
+  #search-input {
+      width: 90%;
+      margin: 5px auto;
+      text-align: center;
+      display: inline-block;
+      background-color: white;
+      padding: 5px;
+      display: none;
   }
 
-  #search-input {
-      width: 80%; 
-      margin: 5px auto; 
+  #search-icon {
+      cursor: pointer;
+      flex-shrink: 0;
+  }
+
+  #search-icon.active + #search-input {
+      display: inline-block;
   }
 
   .sessao_principal {
-      width: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
       flex-wrap: wrap;
+      margin: 0 auto;
   }
 
-  .principal{
-    margin:5vh;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    gap: 5em;
-    width: 60vw;
+  .principal {
+      margin: 5vh;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      gap: 5em;
+      width: 100%;
   }
 
   .principal_card {
       height: auto;
-      width: 120%; 
-      margin: 1em auto; 
+      width: 120%;
+      margin: 1em auto;
   }
 
   .principal_card_img {
-      width: 100%; 
-      height: auto; 
+      width: 80%;
+      height: auto;
   }
 
   .principal_minicards {
-      width: 80%; 
+      width: 80%;
+      display: flex;
       flex-direction: column;
-      gap: 1em;
+      align-items: center;
+      gap: 0;
       margin-bottom: 2em;
       margin: 0 auto;
   }
 
-  .principal_minicard {
-      width: 110%;
+  #scroll-top-link {
+      right: 20%;
   }
 
-  .principal_minicard_img {
-      width: 110%;
-      height: auto;
+  .Rodape {
+      display: flex;
+      flex-direction: row;
+      padding: 10px;
   }
+}
 
-  .Rodape{
-    display:flex;
-    flex-direction: row;
-    padding: 10px;
 
+@media only screen and (min-width: 601px) and (max-width: 1024px) {
+  .principal_minicards {
+      width: 80%;
+      display: flex;
+      justify-content: space-between;
+      gap: 10px;
+      margin-bottom: 2em;
+      margin: 0 auto;
+      align-items: center;
   }
-
 }
