--- a/css/style.css
+++ b/css/style.css
@@ -276,7 +276,7 @@ table {
 }
 
 .resultado_pesquisa {
-  width: 90vw;
+  width: 100%;
   height: auto;
   left: 50%;
   transform: translateX(-50%);
