--- a/css/styleAdmPage.css
+++ b/css/styleAdmPage.css
@@ -85,7 +85,7 @@ main {
 .principal {
   margin-top: 1em;
   height: 40vh;
-  width: 40vw;
+  width: 50vw;
   background-color: #E3C88F;
 }
 
@@ -94,3 +94,28 @@ main {
   margin: 0.5em 0;
 }
 
+.principal_formulario{
+  padding: 20px 20px;
+  background-color: #333;
+  color: white;
+}
+
+.tema-select{
+  background-color: #E3C88F;
+  color:#333;
+  font-size: 15px;
+}
+
+.button{
+  padding: 10px 10px;
+}
+
+h1{
+  text-align: center;
+}
+
+.search{
+    margin: 0 auto; 
+    display: flex;
+    align-items: center;
+}
