--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,7 @@ table {
   color: aliceblue;
   font-size: 1.5em;
   margin-bottom: 0.5em;
+  height: 2em;
   padding: 10px;
   background-color: #333;
 }
