--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ table {
   width: 40vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .principal_minicard_titulo {
