--- a/css/styleAdmPage.css
+++ b/css/styleAdmPage.css
@@ -95,9 +95,17 @@ main {
 }
 
 .principal_formulario{
+  display: flex;
+  gap: 1em;
   padding: 20px 20px;
   background-color: #333;
   color: white;
+}
+
+#formulario_aviso {
+  display: none;
+  color: chartreuse;
+
 }
 
 .tema-select{
