--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,6 @@ table {
   min-height: 100vh;
   margin: 0;
   font-family: Roboto, Arial, sans-serif;
-  overflow-x: hidden;
 }
 
 .cabecalho {  
@@ -346,7 +345,6 @@ table {
       margin-bottom: 2em;
   }
 
-
   .cabecalho {
       flex-direction: row;
       justify-content: space-evenly;
@@ -405,17 +403,15 @@ table {
 
   .principal_card {
       height: auto;
-      max-width: 100%;
-      padding-left: 20px;
+      width: 120%;
       margin: 1em 0.5em;
-      align-items: center;
   }
   .principal_card_titulo {
     font-size: 1.5em;
   }
 
   .principal_card_img {
-      width: 40vh;
+      width: 80%;
       height: auto;
   }
 
@@ -448,33 +444,21 @@ table {
 
 
 @media only screen and (min-width: 601px) and (max-width: 1024px) {
-
-  .principal{
-    width: 90%; 
-  }
-
   .principal_minicards {
-    width: 80%;
-    margin: 0 auto 2em; 
-    display: flex;
-    justify-content: space-between;
-    gap: 10px;
-    align-items: center;
+      width: 80%;
+      display: flex;
+      justify-content: space-between;
+      gap: 10px;
+      margin-bottom: 2em;
+      margin: 0 auto;
+      align-items: center;
   }
-  
-  .conteudo_sessao {
+
+  .conteudo_sessao{
     display: flex;
     gap: 3vw;
-    justify-content: center;
     flex-wrap: wrap;
+    justify-content: center;
   }
-  
+
 }
-
-@media only screen and (max-width:2000px){
-/*
-aplicar para telas maiores 
-*/
-
-
-} 
