--- a/css/style.css
+++ b/css/style.css
@@ -465,9 +465,16 @@ table {
 
 }
 
-@media only screen and (min-height: 406px) and (max-height: 656px) {
+@media only screen and (min-height: 300px) and (max-height: 656px) {
+  .cabecalho_imagem {
+    width: 2em;
+    height: 2em;
+  }
+  
   .resultado_pesquisa {
     margin-top: 2em;
   }
+
+
 
 }
