--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ table {
   min-height: 100vh;
   margin: 0;
   font-family: Roboto, Arial, sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .cabecalho {  
@@ -465,7 +465,7 @@ table {
 
 }
 
-@media only screen and (min-height: 300px) and (max-height: 656px) {
+@media only screen and (min-height: 150px) and (max-height: 656px) {
   .cabecalho_imagem {
     width: 2em;
     height: 2em;
