--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ table {
   min-height: 100vh;
   margin: 0;
   font-family: Roboto, Arial, sans-serif;
-  overflow-x: hidden;
+  overflow-x: initial;
 }
 
 .cabecalho {  
@@ -404,16 +404,16 @@ table {
   }
 
   .principal_card {
-      height: auto;
-      width: 120%;
+      width: 100%;
       margin: 1em 0.5em;
+      margin-right: 0;
   }
   .principal_card_titulo {
     font-size: 1.5em;
   }
 
   .principal_card_img {
-      width: 80%;
+      width: 100%;
       height: auto;
   }
 
@@ -446,6 +446,10 @@ table {
 
 
 @media only screen and (min-width: 601px) and (max-width: 1024px) {
+  .principal{
+    width: 90%;   
+  }
+
   .principal_minicards {
       width: 80%;
       display: flex;
